--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,16 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;600;700;800&display=swap"
 			rel="stylesheet"
-		/>
+			/>
 		<script src="./scroll-smooth.js"></script>
 		<script src="./scroll.smooth2.js"></script>
 
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-		/>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+			/>
+		<script
+			src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	</head>
 
 	<body onscroll="mobileViewScroll()">
@@ -30,14 +31,12 @@
 				<img src="images/logo.svg" alt="pickmyad" class="logo-img" />
 				<img src="images/mobile-logo.svg" alt="pickmyad" class="logo-res" />
 				<div class="lan-btn">
-					<a href="https://app.pickmy.link/auth/v3/login"
-						><button class="btn-common login">Login</button></a
-					>
-					<a href="https://app.pickmy.link/auth/v3/login"
-						><button class="btn-common create-link">
+					<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button class="btn-common
+							login">Login</button></a>
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
+							create-link">
 							Create you free link 🎉
-						</button></a
-					>
+						</button></a>
 				</div>
 			</div>
 			<div class="land-head zoo-in">
@@ -61,12 +60,12 @@
 							placeholder="yourname"
 							onclick="inputFocus(event)"
 							onblur="hideBorder()"
-						/>
+							/>
 					</div>
 				</div>
 				<div class="land-claim">
 					<div>
-						<a href="https://app.pickmy.link/auth/v3/signup" class="pulse">
+						<a href="https://app.pickmy.link/auth/v3/signup" target="_blank" class="pulse">
 							<button id="myLink">Grab your Pickmylink</button>
 						</a>
 					</div>
@@ -101,8 +100,8 @@
 			<div class="pin-spacer" id="text-view">
 				<div class="wrapper d-flex">
 					<section
-						class="section section--large vw-100 vh-100 d-flex justify-content-center align-items-center active"
-					>
+						class="section section--large vw-100 vh-100 d-flex justify-content-center
+						align-items-center active">
 						<h2>
 							millions of<br />
 							<span> dollars earned</span>
@@ -110,8 +109,8 @@
 						<p>by creators selling on pickmy.link</p>
 					</section>
 					<section
-						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex justify-content-center align-items-center active"
-					>
+						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
+						justify-content-center align-items-center active">
 						<h2>
 							millions of<br />
 							<span> dollars earned</span>
@@ -119,8 +118,8 @@
 						<p>by creators selling on pickmy.link</p>
 					</section>
 					<section
-						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex justify-content-center align-items-center active"
-					>
+						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
+						justify-content-center align-items-center active">
 						<h2>
 							millions of<br />
 							<span> dollars earned</span>
@@ -181,8 +180,7 @@
 								allowfullscreen="true"
 								webkit-playsinline="true"
 								scrolling="no"
-								frameborder="0"
-							></iframe>
+								frameborder="0"></iframe>
 							<div class="test-vloger">
 								<img id="image" alt="image" />
 							</div>
@@ -209,8 +207,7 @@
 						allowfullscreen="true"
 						webkit-playsinline="true"
 						scrolling="no"
-						frameborder="0"
-					></iframe>
+						frameborder="0"></iframe>
 					<div class="test-vloger">
 						<img id="mv-image" alt="image" />
 					</div>
@@ -225,7 +222,7 @@
 					<h2 id="total-value1">
 						<span class="rupee">₹</span>
 						<div id="amount">30L</div>
-						*
+						<div class="star">*</div>
 					</h2>
 					<!-- id="value" animation script number -->
 					<span class="earn">you could earn <span class="emoji">🤑</span></span>
@@ -233,11 +230,10 @@
 						*based on an estimated 1% to 5% of your followers purchasing
 						straight from your store.
 					</p>
-					<a href="https://app.pickmy.link/auth/v3/login"
-						><button class="btn-common create-link earn-btn">
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
+							create-link earn-btn">
 							Grab your Pickmy.link now
-						</button></a
-					>
+						</button></a>
 				</div>
 				<div class="earn-rich">
 					<h3>how rich is rich?</h3>
@@ -255,7 +251,7 @@
 							value="40"
 							min="10"
 							max="100"
-						/>
+							/>
 						<div id="followers" style="left: calc(31.25% + 6px)">
 							<span>₹250</span>
 						</div>
@@ -271,7 +267,7 @@
 							value="100000"
 							min="1000"
 							max="1000000"
-						/>
+							/>
 						<div id="monthly-post" style="left: calc(31.25% + 6px)">
 							<span>₹250</span>
 						</div>
@@ -290,11 +286,10 @@
 						Creators are taking the first steps toward becoming creatorpreneurs.
 						Be a creatorpreneur, not just a creative.
 					</p>
-					<a href="https://app.pickmy.link/auth/v3/login"
-						><button class="btn-common create-link earn-btn">
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
+							create-link earn-btn">
 							Grab your Pickmy.link now
-						</button></a
-					>
+						</button></a>
 				</div>
 				<div class="pick-slider">
 					<div class="slider">
@@ -308,8 +303,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@cybertamizha"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" />
 										<p>Pickmy.link</p>
 										<h3>Cyber Tamizha - சைபர் தமிழா</h3>
@@ -322,13 +316,12 @@
 										<img
 											src="./images/channels_profile3.jpg"
 											alt="DANJRVLOGS"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@DANJRVLOGS"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>DAN JR VLOGS</h3>
@@ -343,8 +336,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@ChefDeenaKitchen"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Chef Deena’s Kitchen</h3>
@@ -359,8 +351,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@GpmuthuOfficialtamil"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Gpmuthu Official</h3>
@@ -375,8 +366,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@PeppaFoodie"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Peppa Foodie</h3>
@@ -391,8 +381,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@HemasKitchen"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Hema's Kitchen</h3>
@@ -405,13 +394,12 @@
 										<img
 											src="./images/channel_cinima_ticket.jpg"
 											alt="CinemaTicketTamil"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@CinemaTicketTamil"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Cinema Ticket</h3>
@@ -424,13 +412,12 @@
 										<img
 											src="./images/channel_idries.jpg"
 											alt="IdrisExplores"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@IdrisExplores"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Idris Explores</h3>
@@ -443,13 +430,12 @@
 										<img
 											src="./images/channels_profile2.jpg"
 											alt="SathishDeepasd"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@SathishDeepasd"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Sathish Deepa</h3>
@@ -462,13 +448,12 @@
 										<img
 											src="./images/channel_vivekjado.jpg"
 											alt="vivekjadoodeepika"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@vivekjadoodeepika9168"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Vivekjadoo Deepika</h3>
@@ -481,13 +466,12 @@
 										<img
 											src="./images/channel_trekker.jpg"
 											alt="TamilTrekkerOfficial"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@TamilTrekkerOfficial"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Tamil Trekker</h3>
@@ -500,13 +484,12 @@
 										<img
 											src="./images/channel_tamizha.jpg"
 											alt="BusinessTamizha"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@BusinessTamizha"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Business Tamizha</h3>
@@ -519,13 +502,12 @@
 										<img
 											src="./images/channel_snazzy.jpg"
 											alt="snazzytamilachi"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@snazzytamilachi"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Snazzy Tamilachi</h3>
@@ -544,8 +526,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/spicysamayals/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" />
 										<p>Pickmy.link</p>
 										<h3>spicysamayals</h3>
@@ -558,13 +539,12 @@
 										<img
 											src="./images/channel_karthickr.jpg"
 											alt="karthickrofl"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/karthickrofl/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>karthickrofl</h3>
@@ -577,13 +557,12 @@
 										<img
 											src="./images/channel_deepabalu.jpg"
 											alt="deepabalu-official"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/deepabalu__official/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>deepabalu__official</h3>
@@ -596,13 +575,12 @@
 										<img
 											src="./images/channel_che_vloger.jpg"
 											alt="chennaivlogger"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/chennaivlogger/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>chennaivlogger</h3>
@@ -615,13 +593,12 @@
 										<img
 											src="./images/channel_nataraj.jpg"
 											alt="nataraj_ks_raj"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/nataraj_ks_raj/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>nataraj_ks_raj</h3>
@@ -634,13 +611,12 @@
 										<img
 											src="./images/channel_twin.jpg"
 											alt="twin-food-delight"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/twin_food_delight/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>twin_food_delight</h3>
@@ -653,13 +629,12 @@
 										<img
 											src="./images/channel_aravind.jpg"
 											alt="arun-aravind-twins"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/arun_aravind_twins/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>arun_aravind_twins</h3>
@@ -674,8 +649,7 @@
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/popz_cruze/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>popz_cruze</h3>
@@ -688,13 +662,12 @@
 										<img
 											src="./images/channel_kothanar.jpg"
 											alt="kovaikothanar"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/kovaikothanar/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>kovaikothanar</h3>
@@ -707,13 +680,12 @@
 										<img
 											src="./images/channel_nives.jpg"
 											alt="nivesfoodflavour"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/nivesfoodflavour/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>nivesfoodflavour</h3>
@@ -726,13 +698,12 @@
 										<img
 											src="./images/channel_couple.jpg"
 											alt="namma_ooru_couple"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/namma_ooru_couple/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>namma_ooru_couple</h3>
@@ -745,13 +716,12 @@
 										<img
 											src="./images/channel_pooja.jpg"
 											alt="pooja__rajendran"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/pooja__rajendran/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>pooja__rajendran</h3>
@@ -764,13 +734,12 @@
 										<img
 											src="./images/channel_moto.jpg"
 											alt="miss_motoaddictto"
-										/>
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.instagram.com/miss_motoaddictto/"
-										target="_blank"
-									>
+										target="_blank">
 										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>miss_motoaddictto</h3>
@@ -843,19 +812,18 @@
 			<div class="pic-footer">
 				<div class="lan-footer">
 					<div class="footer-by">
-						<img src="images/logo.svg" alt="pickmyad" />
+						<a href="#">
+						<img src="images/logo.svg" alt="pickmyad" /></a>
 						<span>by pickmyad</span>
 					</div>
 
 					<div class="lan-allow">
-						<a href="https://app.pickmy.link/auth/v3/login"
-							><button class="btn-common login">Login</button></a
-						>
-						<a href="https://app.pickmy.link/auth/v3/login"
-							><button class="btn-common create-link">
+						<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button class="btn-common
+								login">Login</button></a>
+						<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
+								create-link">
 								Create you free link 🎉
-							</button></a
-						>
+							</button></a>
 					</div>
 				</div>
 				<div class="footer-social">
@@ -897,6 +865,7 @@
 				$("#child").toggle();
 			});
 		</script>
+		
 		<script src="./index.js"></script>
 	</body>
 </html>
