modified image changes

--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
 
 							<div class="land-lin" id="profile-link">
 								<span>Profile Links</span>
-								<p>
+								<p id="link-content">
 									Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint
 									occaecat cupidatat non proident.
@@ -161,7 +161,7 @@
 							</div>
 							<div class="land-lin mobile2" id="brand-collaboration">
 								<span>Brand Collaboration</span>
-								<p>
+								<p id="brand-content">
 									Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint
 									occaecat cupidatat non proident.
