modified content changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<meta
+			name="description"
+			content="Simplify your online presence with PickMy.link. Create a
+			personalized link that brings all of your content together in one place. Join
+			the community and grow your online presence today."
+			/>
+		<meta
+			name="keywords"
+			content="PickMy.link, personalized link, creators, influencers, online
+			presence, vloggers, gamers, petfluencers, trainers, coaches, foodies, content
+			creators, monetize, engage, community, Instagram bio, YouTube About Us, links
+			management."
+			/>
+		<title>
+			The All-in-One Link Hub for Creators and Influencers | PickMy.link
+		</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="./css/tailwind.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,10 +46,10 @@
 				<img src="images/logo.svg" alt="pickmyad" class="logo-img" />
 				<img src="images/mobile-logo.svg" alt="pickmyad" class="logo-res" />
 				<div class="lan-btn">
-					<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button class="btn-common
-							login">Login</button></a>
-					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
-							create-link">
+					<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button
+							class="btn-common login">Login</button></a>
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button
+							class="btn-common create-link">
 							Create you free link 🎉
 						</button></a>
 				</div>
@@ -65,7 +80,10 @@
 				</div>
 				<div class="land-claim">
 					<div>
-						<a href="https://app.pickmy.link/auth/v3/signup" target="_blank" class="pulse">
+						<a
+							href="https://app.pickmy.link/auth/v3/signup"
+							target="_blank"
+							class="pulse">
 							<button id="myLink">Grab your Pickmylink</button>
 						</a>
 					</div>
@@ -102,9 +120,16 @@
 					<section
 						class="section section--large vw-100 vh-100 d-flex justify-content-center
 						align-items-center active">
+						<h2>monetize your<br> <span>presence</span>
+						</h2>
+						<p>by creators selling on pickmy.link</p>
+
+					</section>
+					<section
+						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
+						justify-content-center align-items-center active">
 						<h2>
-							millions of<br />
-							<span> dollars earned</span>
+							build your<br> <span>community</span> 
 						</h2>
 						<p>by creators selling on pickmy.link</p>
 					</section>
@@ -112,17 +137,7 @@
 						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
 						justify-content-center align-items-center active">
 						<h2>
-							millions of<br />
-							<span> dollars earned</span>
-						</h2>
-						<p>by creators selling on pickmy.link</p>
-					</section>
-					<section
-						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
-						justify-content-center align-items-center active">
-						<h2>
-							millions of<br />
-							<span> dollars earned</span>
+							showcase everything<br><span> you are</span>
 						</h2>
 						<p>by creators selling on pickmy.link</p>
 					</section>
@@ -146,25 +161,24 @@
 								<div id="child" class="infludrop-btn"></div>
 							</div>
 
-							<p class="vloger-choi">
-								Then you have an endless range of choices for a micro-landing
-								page.
+							<p class="vloger-choi" id="influencer-list">
+								
 							</p>
 
 							<div class="land-lin" id="profile-link">
 								<span>Profile Links</span>
-								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse
+								<p id="profile-li">
+									<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint
-									occaecat cupidatat non proident.
+									occaecat cupidatat non proident. -->
 								</p>
 							</div>
 							<div class="land-lin mobile2" id="brand-collaboration">
 								<span>Brand Collaboration</span>
-								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse
+								<p id="brand-collab">
+									<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint
-									occaecat cupidatat non proident.
+									occaecat cupidatat non proident. -->
 								</p>
 							</div>
 						</div>
@@ -188,10 +202,10 @@
 					</div>
 					<div class="land-lin mobile" id="brand-collaboration">
 						<span>Brand Collaboration</span>
-						<p>
-							Duis aute irure dolor in reprehenderit in voluptate velit esse
+						<p id="brand-collab">
+							<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat non proident.
+							cupidatat non proident. -->
 						</p>
 					</div>
 				</div>
@@ -230,8 +244,8 @@
 						*based on an estimated 1% to 5% of your followers purchasing
 						straight from your store.
 					</p>
-					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
-							create-link earn-btn">
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button
+							class="btn-common create-link earn-btn">
 							Grab your Pickmy.link now
 						</button></a>
 				</div>
@@ -286,8 +300,8 @@
 						Creators are taking the first steps toward becoming creatorpreneurs.
 						Be a creatorpreneur, not just a creative.
 					</p>
-					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
-							create-link earn-btn">
+					<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button
+							class="btn-common create-link earn-btn">
 							Grab your Pickmy.link now
 						</button></a>
 				</div>
@@ -298,7 +312,10 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channel_profile4.jpg" alt="cybertamizha" />
+										<img
+											src="./images/channel_profile4.jpg"
+											alt="cybertamizha"
+											/>
 									</div>
 									<a
 										class="flip-card-back"
@@ -331,13 +348,16 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channels_profile.jpg" alt="ChefDeenaKitchen" />
+										<img
+											src="./images/channels_profile.jpg"
+											alt="ChefDeenaKitchen"
+											/>
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@ChefDeenaKitchen"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Chef Deena’s Kitchen</h3>
 									</a>
@@ -352,7 +372,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@GpmuthuOfficialtamil"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Gpmuthu Official</h3>
 									</a>
@@ -361,7 +381,10 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channel_profile5.jpg" alt="PeppaFoodie" />
+										<img
+											src="./images/channel_profile5.jpg"
+											alt="PeppaFoodie"
+											/>
 									</div>
 									<a
 										class="flip-card-back"
@@ -418,7 +441,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@IdrisExplores"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Idris Explores</h3>
 									</a>
@@ -436,7 +459,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@SathishDeepasd"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Sathish Deepa</h3>
 									</a>
@@ -454,7 +477,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@vivekjadoodeepika9168"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Vivekjadoo Deepika</h3>
 									</a>
@@ -472,7 +495,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@TamilTrekkerOfficial"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Tamil Trekker</h3>
 									</a>
@@ -490,7 +513,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@BusinessTamizha"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Business Tamizha</h3>
 									</a>
@@ -508,7 +531,7 @@
 										class="flip-card-back"
 										href="https://www.youtube.com/@snazzytamilachi"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Snazzy Tamilachi</h3>
 									</a>
@@ -545,7 +568,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/karthickrofl/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>karthickrofl</h3>
 									</a>
@@ -563,7 +586,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/deepabalu__official/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>deepabalu__official</h3>
 									</a>
@@ -599,7 +622,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/nataraj_ks_raj/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>nataraj_ks_raj</h3>
 									</a>
@@ -617,7 +640,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/twin_food_delight/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>twin_food_delight</h3>
 									</a>
@@ -635,7 +658,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/arun_aravind_twins/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>arun_aravind_twins</h3>
 									</a>
@@ -650,7 +673,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/popz_cruze/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>popz_cruze</h3>
 									</a>
@@ -668,7 +691,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/kovaikothanar/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>kovaikothanar</h3>
 									</a>
@@ -686,7 +709,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/nivesfoodflavour/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>nivesfoodflavour</h3>
 									</a>
@@ -704,7 +727,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/namma_ooru_couple/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>namma_ooru_couple</h3>
 									</a>
@@ -722,7 +745,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/pooja__rajendran/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>pooja__rajendran</h3>
 									</a>
@@ -740,7 +763,7 @@
 										class="flip-card-back"
 										href="https://www.instagram.com/miss_motoaddictto/"
 										target="_blank">
-										<img src="./images/link_re.svg" alt="link"/>
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>miss_motoaddictto</h3>
 									</a>
@@ -764,38 +787,38 @@
 					<div class="accordion-items">
 						<div class="accordion-heading">What is a pickmy.link?</div>
 						<div class="accordion-content" style="display: block">
-							pickmy.link is a single link that you can use to reveal everything
-							you’re sharing, everywhere you’re sharing it – all in one place.
-							You can add this personalised URL to your bio on any social media
-							platform, in your email signatures, on business cards, and
-							anywhere your followers, visitors and customers might discover or
-							interact with you.<br />
+							Perfect platform for creators and influencers who want to simplify their
+							online presence. Sign up for free and add all your social links, website
+							link, and any other URL to get your own Profile link
 
-							<p>
-								“pickmy.link solves the most obvious problem a majority of
-								creators have had by allowing them to promote ALL of their
-								platforms, products, services, etc in the same link.” –
-								<a href="#">@rileydoingthings</a>
-							</p>
 						</div>
 
-						<div class="accordion-heading">What is pickmy.link used for?</div>
+						<div class="accordion-heading">How does PickMy.link work?</div>
 						<div class="accordion-content">
-							"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							PickMy.link is easy to use. Simply sign up for free and create your
+							personalized link. You can then add as many links as you like to your
+							PickMy.link profile, making it a one-stop for all your content. Share
+							your PickMy.link on your Instagram bio or YouTube About Us to bring all
+							of your content together in one place.
 						</div>
 
-						<div class="accordion-heading">Why do I need a pickmy.link?</div>
+						<div class="accordion-heading">Why PickMylink instead of other
+							alternatives like Link tree or bio link?</div>
 						<div class="accordion-content">
-							"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							PickMy.link is a unique platform that offers personalized profile links
+							for content creators and influencers in India, unlike other alternatives!
+							PickMy.link helps you earn money through its built-in affiliate marketing
+							features. With an attractive and user-friendly interface, PickMy.link
+							offers a hassle-free solution for managing your online presence, making
+							it a smart choice for content creators and influencers in India.
 						</div>
 						<div class="accordion-heading">
-							Can you get paid and sell things from a pickmy.link?
+							What kind of links can I add to my PickMy.link profile?
 						</div>
 						<div class="accordion-content">
-							"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							You can add any links you like to your PickMy.link profile. This can
+							include your social media profiles, website, blog, and any other content
+							you want to showcase to your audience.
 						</div>
 						<div class="accordion-heading">
 							How many links should I have on my pickmy.link?
@@ -812,16 +835,15 @@
 			<div class="pic-footer">
 				<div class="lan-footer">
 					<div class="footer-by">
-						<a href="#">
-						<img src="images/logo.svg" alt="pickmyad" /></a>
+						<a href="#"> <img src="images/logo.svg" alt="pickmyad" /></a>
 						<span>by pickmyad</span>
 					</div>
 
 					<div class="lan-allow">
-						<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button class="btn-common
-								login">Login</button></a>
-						<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button class="btn-common
-								create-link">
+						<a href="https://app.pickmy.link/auth/v3/login" target="_blank"><button
+								class="btn-common login">Login</button></a>
+						<a href="https://app.pickmy.link/auth/v3/signup" target="_blank"><button
+								class="btn-common create-link">
 								Create you free link 🎉
 							</button></a>
 					</div>
@@ -865,7 +887,6 @@
 				$("#child").toggle();
 			});
 		</script>
-		
 		<script src="./index.js"></script>
 	</body>
 </html>
