modified content changes

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
 					</div>
 					<div class="land-lin mobile" id="brand-collaboration">
 						<span>Brand Collaboration</span>
-						<p id="brand-collab">
+						<p id="brand-mobile">
 							<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
 							cupidatat non proident. -->
