--- a/public/index.html
+++ b/public/index.html
@@ -122,24 +122,24 @@
 						align-items-center active">
 						<h2>monetize your<br> <span>presence</span>
 						</h2>
-						<p>by creators selling on pickmy.link</p>
+						<p>Take advantage of earning opportunities with PickMy.link.</p>
 
 					</section>
 					<section
 						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
 						justify-content-center align-items-center active">
-						<h2>
-							build your<br> <span>community</span> 
+						<h2>create microsite <br><span>no code</span>
+							<!-- build your<br> <span>community</span>  -->
 						</h2>
-						<p>by creators selling on pickmy.link</p>
+						<p>With your own microsite, share your content in countless ways.</p>
 					</section>
 					<section
 						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex
 						justify-content-center align-items-center active">
 						<h2>
-							showcase everything<br><span> you are</span>
+							build your<br><span>community</span>
 						</h2>
-						<p>by creators selling on pickmy.link</p>
+						<p>Make it easy for your followers to find all about you and stay connected.</p>
 					</section>
 				</div>
 			</div>
