--- a/public/index.html
+++ b/public/index.html
@@ -133,11 +133,11 @@
 						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex justify-content-center align-items-center active"
 					>
 						<h2>
-							create microsite <br /><span>no code</span>
+							create no code<br /><span>microsite</span>
 							<!-- build your<br> <span>community</span>  -->
 						</h2>
 						<p>
-							Build your own microsite in minutes, share your content in
+							Build microsite in minutes, share your content in
 							countless ways.
 						</p>
 					</section>
